--- a/PAM/Views/Request/ViewRequest.cshtml
+++ b/PAM/Views/Request/ViewRequest.cshtml
@@ -1,444 +1,25 @@
 ﻿@model Request
-
 @{
-  ViewData["Title"] = "Viewing";
-  var request = (Request)ViewData["request"];
+  ViewData["Title"] = "View Request";
 }
 
-<div class="row mb-3">
-  <div class="col-12">
-    <a asp-controller="Request" asp-action="MyRequests" class="btn btn-primary float-right">Return</a>
-  </div>
-</div>
-<div class="card border-info mb-1">
-  <div class="card-header bg-info text-white">Request Information</div>
-  <div class="card-body">
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Request Id</label>
-        <span class="form-control">@Model.RequestId</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Request Type</label>
-        <span class="form-control">@Model.RequestType.DisplayCode</span>
-      </div>
-    </div>
-    @if (!Model.IsSelfRequest)
-    {
-      <div class="row">
-        <div class="form-group">
-          <label>Prepared By</label>
-          <span class="form-control">@Model.RequestedBy.Name</span>
-        </div>
-      </div>
-    }
-  </div>
-</div>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a asp-action="MyRequests">My Requests</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Request ID @Model.DisplayId</li>
+  </ol>
+</nav>
 
-<div class="card border-info mb-1">
-  <div class="card-header bg-info text-white">
-    Requester Information
-  </div>
-  <div class="card-body">
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>First Name</label>
-        <span class="form-control">@Model.RequestedFor.FirstName</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Last Name</label>
-        <span class="form-control">@Model.RequestedFor.LastName</span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Department</label>
-        <span class="form-control">@Model.RequestedFor.Department</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Service</label>
-        <span class="form-control">@Model.RequestedFor.Service</span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Title</label>
-        <span class="form-control">@Model.RequestedFor.Title</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Email</label>
-        <span class="form-control">@Model.RequestedFor.Email</span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Department</label>
-        <span class="form-control">@Model.RequestedFor.Department</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Service</label>
-        <span class="form-control">@Model.RequestedFor.Service</span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Address</label>
-        <span class="form-control">@Model.RequestedFor.Address</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>City</label>
-        <span class="form-control">@Model.RequestedFor.City</span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>State</label>
-        <span class="form-control">@Model.RequestedFor.State</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Zip Code</label>
-        <span class="form-control">@Model.RequestedFor.Zip</span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Phone</label>
-        <span class="form-control">@Model.RequestedFor.Phone</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Cell Phone</label>
-        <span class="form-control">@Model.RequestedFor.CellPhone</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="card border-info mb-1">
-  <div class="card-header bg-info text-white">
-    Systems Requested
-  </div>
-  @if (Model.RequestTypeId == 4)
-  {
-    <div class="card-body">
-      <div class="row">
-        <div class="form-group col-md-6">
-          <label>Bureau</label>
-          <span class="form-control">@Model.RequestedFor.Unit.Bureau.Description</span>
-        </div>
-        <div class="form-group col-md-6">
-          <label>Unit / Job Function</label>
-          <span class="form-control">@Model.RequestedFor.Unit.Name</span>
-        </div>
-      </div>
-      <div class="row">
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Id</th>
-              <th scope="col">Name</th>
-              <th scope="col" class="d-none d-md-table-cell">Description</th>
-              <th scope="col" class="nowrap">In Portfolio</th>
-            </tr>
-          </thead>
-          <tbody>
-            @foreach (var requestedSystem in Model.Systems)
-            {
-              <tr>
-                <td>@requestedSystem.System.SystemId</td>
-                <td>@requestedSystem.System.Name</td>
-                <td class="d-none d-md-table-cell">@requestedSystem.System.Description</td>
-                <td>@requestedSystem.InPortfolio</td>
-              </tr>
-            }
-          </tbody>
-        </table>
-      </div>
-    </div>
-  }
-  @if (Model.RequestTypeId == 2)
-  {
-    <div class="card-body">
-      <div class="row">
-        <div class="form-group col-md-6">
-          <div class="card border-info">
-            <h5 class="card-header text-center bg-info text-white">Current Bureau & Systems</h5>
-            <div class="card-body">
-              <div class="row">
-                <div class="col-md-12">
-                  <label>Bureau</label>
-                  <span class="form-control">@Model.TransferredFromUnit.Bureau.Description</span>
-                </div>
-              </div>
-              <div class="row mb-3">
-                <div class="col-md-12">
-                  <label>Unit / Job Function</label>
-                  <span class="form-control">@Model.TransferredFromUnit.Name</span>
-                </div>
-              </div>
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Name</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  @foreach (var requestedSystem in Model.Systems)
-                  {
-                    @if (requestedSystem.AccessType == SystemAccessType.Remove || requestedSystem.AccessType == SystemAccessType.Update)
-                    {
-                      <tr>
-                        <td>@requestedSystem.System.SystemId</td>
-                        <td>@requestedSystem.System.Name</td>
-                      </tr>
-                    }
-                  }
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-        <div class="form-group col-md-6">
-          <div class="card border-info">
-            <h5 class="card-header text-center bg-info text-white">New Bureau & Systems</h5>
-            <div class="card-body">
-              <div class="row">
-                <div class="col-md-12">
-                  <label>Bureau</label>
-                  <span class="form-control">@Model.RequestedFor.Unit.Bureau.Description</span>
-                </div>
-              </div>
-              <div class="row mb-3">
-                <div class="col-md-12">
-                  <label>Unit / Job Function</label>
-                  <span class="form-control">@Model.RequestedFor.Unit.Name</span>
-                </div>
-              </div>
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Name</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  @foreach (var requestedSystem in Model.Systems)
-                  {
-                    @if (requestedSystem.AccessType == SystemAccessType.Add || requestedSystem.AccessType == SystemAccessType.Update)
-                    {
-                      <tr>
-                        <td>@requestedSystem.System.SystemId</td>
-                        <td>@requestedSystem.System.Name</td>
-                      </tr>
-                    }
-                  }
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card border-success">
-            <h5 class="card-header text-center bg-success text-white">Added Systems</h5>
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">Id</th>
-                  <th scope="col">Name</th>
-                </tr>
-              </thead>
-              <tbody>
-                @foreach (var requestedSystem in Model.Systems)
-                {
-                  @if (requestedSystem.AccessType == SystemAccessType.Add)
-                  {
-                    <tr>
-                      <td>@requestedSystem.System.SystemId</td>
-                      <td>@requestedSystem.System.Name</td>
-                    </tr>
-                  }
-                }
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card border-danger">
-            <h5 class="card-header text-center bg-danger text-white">Removed Systems</h5>
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">Id</th>
-                  <th scope="col">Name</th>
-                </tr>
-              </thead>
-              <tbody>
-                @foreach (var requestedSystem in Model.Systems)
-                {
-                  @if (requestedSystem.AccessType == SystemAccessType.Remove)
-                  {
-                    <tr>
-                      <td>@requestedSystem.System.SystemId</td>
-                      <td>@requestedSystem.System.Name</td>
-                    </tr>
-                  }
-                }
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card border-primary">
-            <h5 class="card-header text-center bg-primary text-white">Kept Systems</h5>
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">Id</th>
-                  <th scope="col">Name</th>
-                </tr>
-              </thead>
-              <tbody>
-                @foreach (var requestedSystem in Model.Systems)
-                {
-                  @if (requestedSystem.AccessType == SystemAccessType.Update)
-                  {
-                    <tr>
-                      <td>@requestedSystem.System.SystemId</td>
-                      <td>@requestedSystem.System.Name</td>
-                    </tr>
-                  }
-                }
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-  }
-  @if (Model.RequestTypeId == 11)
-  {
-    <div class="card-body">
-      <div class="row">
-        <div class="form-group col-md-6">
-          <label>Bureau</label>
-          <span class="form-control">@Model.RequestedFor.Unit.Bureau.Description</span>
-        </div>
-        <div class="form-group col-md-6">
-          <label>Unit / Job Function</label>
-          <span class="form-control">@Model.RequestedFor.Unit.Name</span>
-        </div>
-      </div>
-      <div class="row p-2">
-        <div class="col-md-12 ">
-          <div class="card border-primary">
-            <h5 class="card-header bg-primary text-white text-center">Requested Additional Systems</h5>
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">Id</th>
-                  <th scope="col">Name</th>
-                  <th scope="col">Description</th>
-                </tr>
-              </thead>
-              <tbody>
-                @foreach (var requestedSystem in Model.Systems)
-                {
-                  if (!(bool)requestedSystem.InPortfolio)
-                  {
-                    <tr>
-                      <td>@requestedSystem.System.SystemId</td>
-                      <td>@requestedSystem.System.Name</td>
-                      <td>@requestedSystem.System.Description</td>
-                    </tr>
-                  }
-                }
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-  }
-</div>
-
-<div class="card border-info mb-1">
-  <div class="card-header bg-info text-white">
-    Additional Information
-  </div>
-  <div class="card-body">
-    <div class="row mb-2">
-      <div class="col-md-4">
-        @if (Model.IsContractor)
-        {
-          <i class="far fa-check-square"></i>
-        }
-        else
-        {
-          <i class="far fa-square"></i>
-        }
-        Contractor
-      </div>
-      <div class="col-md-4">
-        @if (Model.IsHighProfileAccess)
-        {
-          <i class="far fa-check-square"></i>
-        }
-        else
-        {
-          <i class="far fa-square"></i>
-        }
-        High Profile
-      </div>
-      <div class="col-md-4">
-        @if (Model.IsGlobalAccess)
-        {
-          <i class="far fa-check-square"></i>
-        }
-        else
-        {
-          <i class="far fa-square"></i>
-        }
-        Global Access
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-4">
-        <label>Caseload Type</label>
-        <span class="form-control">@Model.CaseloadType</span>
-      </div>
-      <div class="form-group col-md-4">
-        <label>Caseload Function</label>
-        <span class="form-control">@Model.CaseloadFunction</span>
-      </div>
-      <div class="form-group col-md-4">
-        <label>Caseload Number</label>
-        <span class="form-control">@Model.CaseloadNumber</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="card border-info mb-1">
-  <div class="card-header bg-info text-white">
-    Signature(s) Required
-  </div>
-  <div class="card-body">
-    @foreach (var review in Model.Reviews)
-    {
-      <div class="row">
-        <div class="form-group col">
-          <label>@review.ReviewerTitle</label>
-          <span class="form-control">@review.Reviewer.Name</span>
-        </div>
-      </div>
-    }
-  </div>
-</div>
-
-<div class="row mt-3">
-  <div class="col-12">
-    <a asp-controller="Request" asp-action="MyRequests" class="btn btn-primary float-right">Return</a>
-  </div>
-</div>
+<partial name="/Views/Shared/ViewRequestPartials/_Request.cshtml" />
+<partial name="/Views/Shared/ViewRequestPartials/_Requester.cshtml" />
+<partial name="/Views/Shared/ViewRequestPartials/_Unit.cshtml" />
+<partial name="/Views/Shared/ViewRequestPartials/_Systems.cshtml" />
+@if (Model.RequestType.DisplayCode == "Leaving Probation")
+{
+  <partial name="/Views/Shared/ViewRequestPartials/_AdditionalInfoForLeaving.cshtml" />
+}
+else
+{
+  <partial name="/Views/Shared/ViewRequestPartials/_AdditionalInfo.cshtml" />
+}
+<partial name="/Views/Shared/ViewRequestPartials/_Signatures.cshtml" />
