--- a/PAM/Views/Shared/ProgressBars/LeavingProbation.cshtml
+++ b/PAM/Views/Shared/ProgressBars/LeavingProbation.cshtml
@@ -3,6 +3,9 @@
     <li class="step" data-title="Requester Information">
       <a class="d-none d-md-inline" asp-action="RequesterInfo" asp-route-id="@ViewData["id"]">Requester Information</a>
     </li>
+    <li class="step" data-title="Unit Selection">
+      <a class="d-none d-md-inline" asp-action="UnitSelection" asp-route-id="@ViewData["id"]">Unit/Job Function Selection</a>
+    </li>
     <li class="step" data-title="Additional Information">
       <a class="d-none d-md-inline" asp-action="AdditionalInfo" asp-route-id="@ViewData["id"]">Additional Information</a>
     </li>
