--- a/PAM/Views/UpdateInfoRequest/AdditionalInfo.cshtml
+++ b/PAM/Views/UpdateInfoRequest/AdditionalInfo.cshtml
@@ -64,7 +64,7 @@
       <button id="saveDraft" class="btn btn-secondary">Save Draft</button>
     </div>
     <div class="col-8 text-right">
-      <a asp-action="RequesterInfo" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
+      <a asp-action="UnitSelection" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
       <button id="next" type="submit" class="btn btn-primary ml-3">Next</button>
     </div>
   </div>
